# fast_zero

./: .gitignore  LICENSE  README.md  alembic.ini  configuracoes.txt  conftest.py  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py
migrations/versions/: 59c17c1d2d8d_create_users_table.py  77e6539c440a_create_users_table.py  bcd06000c297_add_field_update_at_exercise_2_.py  ea5c998cdb38_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
